--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stacks/common": "^4.3.2",
     "@stacks/connect": "^6.9.1",
     "@stacks/connect-react": "^18.0.1",
     "@stacks/network": "^4.3.2",
     "@stacks/transactions": "^4.3.2",
     "classnames": "^2.3.1",
+    "lodash": "^4.17.21",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
